style: fixed buttons not showing as cursor pointer

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,3 +77,10 @@
 		clip-path: inset(0px -15px -15px -15px);
 	}
 }
+
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
+}
